[package]
name = "google_api"
version = "0.0.1"
authors = ["Aleksey Minkin <a.minkin@devcaz.com>"]
edition = "2018"
exclude = [".idea/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.38"
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
